[gd_scene load_steps=6 format=3 uid="uid://bsy502pfvfwvt"]

[ext_resource type="Script" uid="uid://bcogp0truxoci" path="res://Scripts/player.gd" id="1_y0qk3"]
[ext_resource type="PackedScene" uid="uid://btokltc2t1w8q" path="res://Assets/KayKit_Adventurers_1.0_FREE/KayKit_Adventurers_1.0_FREE/Characters/fbx/RogueHooded.fbx" id="2_cvnsp"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_v0iea"]
radius = 0.4
height = 1.8

[sub_resource type="SystemFont" id="SystemFont_cvnsp"]
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_6t5aa"]
font = SubResource("SystemFont_cvnsp")
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 15
shadow_color = Color(0.6161169, 0.22967413, 0.609635, 0)

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.092617154, 0)
script = ExtResource("1_y0qk3")

[node name="ThirdPerson" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.96314377, 0.26898706, 0, -0.26898706, 0.96314377, 0, 2.9834247, 2.3911319)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0476623, 0.40942824)
shape = SubResource("CapsuleShape3D_v0iea")
debug_color = Color(0.9529412, 0, 0.5568628, 1)

[node name="FirstPerson" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.9998767, -0.015707316, 0, 0.015707316, 0.9998767, -0.0050258636, 1.544797, -0.38936007)
fov = 89.47012

[node name="RayCast3D" type="RayCast3D" parent="FirstPerson"]
transform = Transform3D(-0.0031709715, -0.02789127, 1.0204201, 1.2589966, 0.04643716, 0.0026809156, -0.016980432, 3.4482443, 0.008217596, 0.0036168098, 0.11484444, 0.36967817)

[node name="Sprite3D" type="Sprite3D" parent="."]

[node name="RogueHooded" parent="Sprite3D" instance=ExtResource("2_cvnsp")]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="Sprite3D/RogueHooded/Rig" index="0"]
bones/1/position = Vector3(9.462559e-08, 0.48128262, -0.39688855)
bones/1/rotation = Quaternion(-0.05233592, 0.0012066803, -6.324933e-05, 0.9986288)
bones/2/rotation = Quaternion(1.862667e-09, -5.820766e-11, -8.983926e-12, 1)
bones/3/rotation = Quaternion(0.05233581, -3.106217e-10, 0.00012649126, 0.9986295)
bones/4/position = Vector3(0.21200734, 0.13413242, 8.341075e-08)
bones/4/rotation = Quaternion(-0.32806212, -0.17763971, -0.79886204, 0.47184625)
bones/5/rotation = Quaternion(-2.1942316e-08, -5.0306774e-08, -0.49286693, 0.87010473)
bones/7/rotation = Quaternion(-0.14218651, -0.42684904, -0.17046465, 0.8766554)
bones/8/position = Vector3(3.7252903e-08, 0.09612508, -0.057500042)
bones/8/rotation = Quaternion(0.12751265, -0.005929415, -0.50201166, 0.8553886)
bones/9/position = Vector3(-0.21200734, 0.13413242, 9.3888126e-08)
bones/9/rotation = Quaternion(-0.47954893, 0.13168815, 0.7511594, 0.43410906)
bones/10/rotation = Quaternion(3.4771368e-09, 3.4771272e-08, 0.59526765, 0.8035275)
bones/12/rotation = Quaternion(-0.042427544, -0.038654644, 0.12362377, 0.990668)
bones/13/position = Vector3(9.313226e-09, 0.09612517, -0.057500035)
bones/13/rotation = Quaternion(0.09633246, 0.19395855, 0.52306706, 0.8243185)
bones/14/rotation = Quaternion(-5.0710304e-15, 1.1920929e-07, -4.6837537e-17, 1)
bones/15/position = Vector3(0.14728989, 0.08435908, 0.022773493)
bones/15/rotation = Quaternion(0.7580991, 0.01470221, -0.13112725, 0.6386512)
bones/16/rotation = Quaternion(0.5896324, 6.3132e-08, -4.0877262e-07, 0.80767184)
bones/17/rotation = Quaternion(-0.6206044, 0.09371699, -0.01665135, 0.7783252)
bones/18/rotation = Quaternion(1.0972983e-09, 0.92035484, -0.39108446, 1.4421497e-07)
bones/19/position = Vector3(-0.1490504, 0.084317334, 0.02328071)
bones/19/rotation = Quaternion(0.76342225, -0.037992787, 0.075944535, 0.6402932)
bones/20/rotation = Quaternion(0.59248644, -6.069477e-08, 4.1012274e-07, 0.8055805)
bones/21/rotation = Quaternion(-0.62536097, -0.027268408, 0.01063244, 0.7797865)
bones/22/rotation = Quaternion(-3.4265852e-09, 0.92035484, -0.39108437, -1.4322518e-07)
bones/23/position = Vector3(0.30971885, 0.77592516, 0.21473837)
bones/23/rotation = Quaternion(0.70588344, 0.041574776, -0.041575056, 0.70588356)
bones/24/position = Vector3(0.21750778, 0.025990268, 0.24423333)
bones/24/rotation = Quaternion(-0.70588344, 0.041574936, 0.041574936, 0.70588356)
bones/25/position = Vector3(-4.011449e-10, 0.3512491, 0.22588001)
bones/25/rotation = Quaternion(3.6977215e-09, 0.39578268, 0.9183442, -1.5936226e-09)
bones/26/position = Vector3(3.0972238e-08, 0.21343616, 9.313226e-09)
bones/26/rotation = Quaternion(-1.317211e-07, 0.3910844, 0.92035484, -8.870926e-08)
bones/27/position = Vector3(6.284054e-09, 0.16565004, 5.515176e-09)
bones/30/position = Vector3(-0.2554088, 0.77592516, 0.21092913)
bones/31/position = Vector3(-0.23306775, 0.025990268, 0.2428165)
bones/31/rotation = Quaternion(-0.7053473, -0.049851965, -0.049851958, 0.7053473)
bones/32/position = Vector3(6.8186905e-09, 0.3512491, 0.22588001)
bones/32/rotation = Quaternion(3.1395322e-09, 0.39578274, 0.9183442, -1.3530577e-09)
bones/33/position = Vector3(-1.2334262e-08, 0.21343614, 5.5879354e-09)
bones/33/rotation = Quaternion(-1.321036e-07, 0.3910844, 0.92035484, -8.854671e-08)
bones/34/position = Vector3(1.2247021e-08, 0.16565003, 3.0675437e-08)
bones/37/position = Vector3(1.3427927, 1.0675246, -0.926714)
bones/37/rotation = Quaternion(-0.70710665, -7.27951e-08, -7.279506e-08, 0.7071069)
bones/38/position = Vector3(0.4635702, 0.8524891, -0.3126634)
bones/38/rotation = Quaternion(-0.53030246, -0.19397143, -0.7751512, -0.28336355)
bones/39/position = Vector3(-0.88333833, 0.9068637, -0.9267145)
bones/39/rotation = Quaternion(-0.70710665, -7.27951e-08, -7.279506e-08, 0.7071069)
bones/40/position = Vector3(-0.41836184, 0.8615522, -0.31689534)
bones/40/rotation = Quaternion(-0.22929735, 0.3846239, 0.8757165, -0.18057665)

[node name="Rogue_Cape" parent="Sprite3D/RogueHooded/Rig/Skeleton3D" index="0"]
transform = Transform3D(0.9999971, -5.151378e-09, 0.002416909, 5.0252993e-09, 0.99999994, 4.4703484e-08, -0.0024169085, -3.7252903e-08, 0.9999971, -2.9236915e-09, 1.0451422, -0.45615265)
bone_idx = 3

[node name="Knife_Offhand" parent="Sprite3D/RogueHooded/Rig/Skeleton3D" index="1"]
transform = Transform3D(-0.046268485, -0.13682508, 0.9895135, 0.9772852, 0.1988829, 0.07319754, -0.20681219, 0.9704244, 0.124515414, 0.40278462, 0.7197099, -0.23445286)
bone_idx = 8

[node name="1H_Crossbow" parent="Sprite3D/RogueHooded/Rig/Skeleton3D" index="2"]
transform = Transform3D(-0.069016576, 0.5496546, -0.8325355, -0.890234, 0.34270415, 0.3000595, 0.4502423, 0.7618609, 0.46566963, -0.38204172, 0.714823, -0.22619955)
visible = false
bone_idx = 13

[node name="1H_Crossbow" parent="Sprite3D/RogueHooded/Rig/Skeleton3D/1H_Crossbow" index="0"]
visible = false

[node name="Throwable" parent="Sprite3D/RogueHooded/Rig/Skeleton3D" index="3"]
transform = Transform3D(-0.069016576, 0.5496546, -0.8325355, -0.890234, 0.34270415, 0.3000595, 0.4502423, 0.7618609, 0.46566963, -0.38204172, 0.714823, -0.22619955)
bone_idx = 13

[node name="Throwable" parent="Sprite3D/RogueHooded/Rig/Skeleton3D/Throwable" index="0"]
visible = false

[node name="Knife" parent="Sprite3D/RogueHooded/Rig/Skeleton3D" index="4"]
transform = Transform3D(-0.069016576, 0.5496546, -0.8325355, -0.890234, 0.34270415, 0.3000595, 0.4502423, 0.7618609, 0.46566963, -0.38204172, 0.714823, -0.22619955)
visible = false
bone_idx = 13

[node name="2H_Crossbow" parent="Sprite3D/RogueHooded/Rig/Skeleton3D" index="5"]
transform = Transform3D(-0.069016576, 0.5496546, -0.8325355, -0.890234, 0.34270415, 0.3000595, 0.4502423, 0.7618609, 0.46566963, -0.38204172, 0.714823, -0.22619955)
visible = false
bone_idx = 13

[node name="2H_Crossbow" parent="Sprite3D/RogueHooded/Rig/Skeleton3D/2H_Crossbow" index="0"]
visible = false

[node name="Head" type="Node3D" parent="."]

[node name="ThirdPersonFront" type="Camera3D" parent="."]
transform = Transform3D(-0.9899201, 0, -0.14162698, -0.035082318, 0.9688344, 0.24521239, 0.1372131, 0.24770927, -0.95906866, 0, 1.7439129, -2.1538954)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BoxContainer" type="BoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="InteractText" type="Label" parent="CanvasLayer/BoxContainer"]
layout_mode = 2
text = "Pressione \"E\" para pausar/despausar a música
Pressione \"F\" para mudar de música
"
label_settings = SubResource("LabelSettings_6t5aa")

[editable path="Sprite3D/RogueHooded"]
